--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,12 @@ description = ""
 authors = ["abishekk92 <bhat.abishek@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 newspaper3k = "^0.2.8"
 markdownify = "^0.11.2"
 fastapi = "^0.78.0"
+gunicorn = "^20.1.0"
+uvicorn = "^0.18.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
