--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ markdownify = "^0.11.2"
 fastapi = "^0.78.0"
 gunicorn = "^20.1.0"
 uvicorn = "^0.18.1"
+magnum = "^14.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
