--- a/iac/fargate/tsconfig.json
+++ b/iac/fargate/tsconfig.json
@@ -2,8 +2,8 @@
     "compilerOptions": {
         "strict": true,
         "outDir": "bin",
-        "target": "es2016",
-        "module": "commonjs",
+        "target": "es6",
+        "module": "CommonJS",
         "moduleResolution": "node",
         "sourceMap": true,
         "experimentalDecorators": true,
